<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/horror2_9"
    android:orientation="vertical"
    tools:context=".MainActivityAccion">

    <ImageView
        android:id="@+id/paramo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/paramo_9"
        />
    <TextView
        android:id="@+id/textAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paramo"


        />

    <Button
        android:id="@+id/butonAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:layout_marginStart="150dp"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:backgroundTint="@color/white"

        />

    <Button
        android:id="@+id/butonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:layout_marginStart="150dp"
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:backgroundTint="@color/white"

        />

</LinearLayout>